2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/partmap_test.in: Skip on ppc due to serious firmware bug.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix wildcard escaping.

	* grub-core/commands/wildcard.c (wildcard_escape): Moved from here ...
	* grub-core/script/execute.c (wildcard_escape): .. to here.
	Don't escape dot.
	* grub-core/commands/wildcard.c (wildcard_unescape): Moved from here ...
	* grub-core/script/execute.c (wildcard_unescape): .. to here.
	Don't escape dot.
	* grub-core/script/execute.c (gettext_append): Always escape.
	(grub_script_arglist_to_argv): Always handle escaping/unescaping.
	* grub-core/script/yylex.l: Don't cut away the escaping.
	* tests/grub_script_echo1.in: Add tests with wildcard.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/serial/ftdi.c (real_config): Handle 1.5 stop bits.
	(ftdi_hw_configure): Likewise.
	* grub-core/bus/usb/serial/pl2303.c (GRUB_PL2303_STOP_BITS_1_5): New
	define.
	(real_config): Handle 1.5 stop bits.
	(pl2303_hw_configure): Likewise.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am: Add ppc linux bootcheck.
	* grub-core/tests/boot/linux-ppc.cfg: New file.
	* grub-core/tests/boot/linux.init-ppc.S: Likewise.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/grub_script_expansion.in: Skip network protocols.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: Use escc-ch-a port on ppc.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/powerpc/ieee1275/grub-mkrescue.in: Handle (and ignore)
	--rom-directory.
	Add -graft-points.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	ESCC serial driver for conducting sautomated tests in qemu.
	Not tested on real hardware.

	* include/grub/serial.h (grub_serial_port): New field escc_desc.
	* grub-core/term/ieee1275/escc.c: New file.
	* grub-core/Makefile.core.def (escc): New module.
